--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
-fastapi>=0.109.1,<0.110.0
-uvicorn>=0.27.1,<0.28.0
-python-dotenv>=1.0.1,<2.0.0
+# FastAPI and dependencies
+fastapi>=0.109.0,<0.110.0
+uvicorn[standard]>=0.27.0,<0.28.0
+pydantic>=2.6.1,<3.0.0
+
+# HTTP Client
 httpx>=0.26.0,<0.27.0
-pydantic>=2.6.1,<3.0.0 
+
+# Storage and Environment
+python-dotenv>=1.0.0,<2.0.0
+supabase>=2.0.0  # For Supabase database operations
+
+# Production Server
 gunicorn>=20.1.0,<24.0.0
